# tinyshop

./: .env.example  .gitignore  Dockerfile  compose.yaml  entrypoint.sh  load.py  makefile  pyproject.toml
accounts/: authentication.py  decorators.py  forms.py  middlewares.py  models.py
accounts/migrations/: 0001_initial.py
backoffice/: chat.py  middleware.py  models.py  urls.py  views.py
backoffice/_views/: auth.py  customers.py  marketing.py  product.py  reports.py
backoffice/components/: collection.py  customer_detail.py  customers.py  login.py  orders.py  product.py  product_detail.py  productadd.py  profile.py  tenant_settings.py
backoffice/migrations/: 0001_initial.py
core/: celery.py  enums.py  models.py  settings.py  urls.py  wsgi.py
landing/: emails.py  service.py  tasks.py  urls_public.py  views.py
landing/components/: login_tenant.py  register_tenant.py
shop/: admin.py  enums.py  middlewares.py  models.py  signals.py  sql_utils.py  urls.py  utils.py  views.py
shop/_views/: collection_view.py
shop/api/: products.py
shop/components/: cart.py  product_detail.py  profile.py
shop/management/commands/: load_data.py  print_recommendations.py  text2sql.py
shop/migrations/: 0001_initial.py  0002_alter_customerevent_options_and_more.py  0003_chatmessage.py  0004_chatmessage_explanation.py  0005_customer_block.py  0006_marketingemail.py
shop/recommendation/: ml.py  utils.py
static/css/: input.css  output.css
templates/shared/: base.html
templates/shared/auth/: login-tenant.html  register-tenant.html
templates/shared/components/: navbar.html
tenant/: admin.py  decorators.py  loaders.py  models.py
tenant/migrations/: 0001_initial.py
(+62 files in other folders)
