[project]
name = "ninjaextra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "django-celery-beat>=2.8.1",
    "django>=5.2.4",
    "django-cotton>=2.1.3",
    "django-redis>=6.0.0",
    "django-tenants>=3.8.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "ruff>=0.12.4",
    "whitenoise>=6.9.0",
    "django-celery-results>=2.6.0",
    "djlint>=1.36.4",
    "django-unicorn>=0.62.0",
    "django-browser-reload>=1.18.0",
    "icecream>=2.1.5",
    "pydantic[email]>=2.11.7",
    "django-pony-express>=2.7.3",
    "django-stubs>=5.2.2",
    "django-htmx>=1.23.2",
    "pillow>=11.3.0",
    "shortuuid>=1.0.13",
    "django-phonenumber-field[phonenumbers]>=8.1.0",
    "black>=25.1.0",
    "faker>=37.4.2",
    "django-extensions>=4.1",
    "pandas>=2.3.1",
    "scikit-surprise>=1.1.4",
    "tenant-schemas-celery>=4.0.1",
    "django-template-partials>=24.4",
    "django-esewa>=1.0.9",
    "stripe>=12.4.0",
    "djade>=1.4.0",
    "django-htmx-messages>=0.1.1",
    "django-ninja>=1.4.3",
    "openai>=1.99.9",
    "transformers>=4.55.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "torchaudio>=2.8.0",
    "accelerate>=1.10.0",
    "langchain>=0.3.27",
    "langchain-huggingface>=0.3.1",
]

[tool.djlint]
profile="django"
ignore="H006"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
